# anime-recommender-service

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile
backend/app/: prestart.sh  pyproject.toml  worker-start.sh
backend/app/app/: config.py  main.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: recommender.py  utils.py
backend/app/app/celery_task_app/: tasks.py  worker.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/schemas/: celery.py  response.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_celery.py
backend/app/app/utils/: timer.py
frontend/: Dockerfile
frontend/app/: pyproject.toml
frontend/app/.streamlit/: config.toml
frontend/app/app/: config.py  dispatcher.py  main.py
frontend/app/app/api/: recanime.py
frontend/app/app/page_creators/: page_table.py
frontend/app/app/page_creators/home_page/: component_keys.py  init_session_states.py  page_content.py
frontend/app/app/page_creators/not_found/: not_found.py
frontend/app/app/schemas/: page_tab.py
frontend/app/app/schemas/recanime/: predict.py
frontend/app/app/utils/: aio.py  session_state.py  timeout.py
scripts/: start-backend-only.sh  test.sh
