[tool.poetry]
name = "frontend-streamlit"
version = "0.1.0"
description = ""
authors = ["yoshi <yoshi4868686@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12.0"
pydantic = "^1.9.2"
aiohttp = "^3.8.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
