[tool.poetry]
name = "frontend-streamlit"
version = "0.1.0"
description = ""
authors = ["yoshi <yoshi4868686@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12.0"
pydantic = "^1.9.2"
aiohttp = "^3.8.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
autoflake = "^1.5.2"
flake8 = "^5.0.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
